--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,44 +1,61 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Playfair - {{ page.title }}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
+    <!-- syntax highlighting CSS -->
+    <link rel="stylesheet" href="/css/syntax.css">
 
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
+    <!-- Custom CSS -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Playfair+Display:400italic" rel="stylesheet" type="text/css">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://playfairapp.com/assets/application.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/post.css">
 
-    </head>
-    <body>
-
-        <div class="site">
-          <div class="header">
-            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-            <a class="extra" href="/">home</a>
-          </div>
-
-          {{ content }}
-
-          <div class="footer">
-            <div class="contact">
-              <p>
-                Your Name<br />
-                What You Are<br />
-                you@example.com
-              </p>
-            </div>
-            <div class="contact">
-              <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
-              </p>
-            </div>
+  </head>
+  <body>
+    <div id="content">
+      <div class="header-nav">
+        <div class="row">
+          <div class="large-12 columns">
+            <nav class="top-bar">
+              <ul class="title-area">
+                <li class="name">
+                  <h1>
+                    <a href="https://playfairapp.com">
+                      <i class="icon icon-cloud"></i>
+                      Playfair
+                    </a>
+                  </h1>
+                </li>
+                <li class="toggle-topbar menu-icon">
+                  <a href="#">
+                    <span>Menu</span>
+                  </a>
+                </li>
+              </ul>
+              <section class="top-bar-section nav-bar">
+                <ul class="left">
+                  <li>
+                    <a href="/">
+                      Blog
+                    </a>
+                  </li>
+                </ul>
+              </section>
+            </nav>
           </div>
         </div>
+      </div>
 
-    </body>
+      <div class="row">
+        <div class="large-12 columns">
+          {{ content }}
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
