--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,12 @@
 ---
 layout: default
 ---
-<h2>{{ page.title }}</h2>
-<p class="meta">{{ page.date | date_to_string }}</p>
+<div class="post-wrapper">
+  <p class="meta">{{ page.date | date_to_string }}</p>
+  <h2 class="subheader">{{ page.title }}</h2>
 
-<div class="post">
-{{ content }}
+  <div class="post">
+    {{ content }}
+  </div>
 </div>
+
