--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Playfair+Display:400italic" rel="stylesheet" type="text/css">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="https://playfairapp.com/assets/application.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/post.css">
+    <link rel="stylesheet" href="/css/post.css">
 
   </head>
   <body>
